--- a/package.json
+++ b/package.json
@@ -8,10 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@chenfengyuan/vue-carousel": "^2.0.0",
+    "@vue/compiler-sfc": "^3.2.33",
     "axios": "^0.26.1",
+    "bootstrap": "^5.1.3",
+    "bootstrap-vue": "^2.22.0",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13",
-    "vue-router": "^4.0.14"
+    "vue": "^3.2.33",
+    "vue-router": "^4.0.14",
+    "vue-ssr-carousel": "^1.4.0",
+    "vue3-carousel": "^0.1.38"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
